<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_create_topic"
        android:icon="@drawable/ic_action_add"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_faq"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_faq"/>
    <item
        android:id="@+id/action_changelog"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_changelog"/>
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_feedback"/>

</menu>
