<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_star"
        android:checkable="true"
        android:icon="@drawable/star_selector_drawable"
        android:orderInCategory="9"
        android:showAsAction="ifRoom"
        android:title="@string/action_star"
        android:visible="false"/>
    <!-- 
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="9"
        android:showAsAction="always"
        android:title="@string/action_edit"
        android:actionViewClass="android.widget.Spinner"
        android:visible="true"/>
    <item
        android:id="@+id/action_reply_as_new"
        android:icon="@drawable/ic_action_reply_as_new"
        android:orderInCategory="50"
        android:showAsAction="ifRoom"
        android:title="@string/action_reply_as_new"
        android:visible="false"/>
     -->
    <item
        android:id="@+id/action_reply"
        android:icon="@drawable/ic_action_reply"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/action_reply"
        android:visible="false"/>
    <item
        android:id="@+id/action_edit_topic"
        android:icon="@drawable/ic_action_edit_topic"
        android:orderInCategory="51"
        android:showAsAction="ifRoom"
        android:title="@string/action_edit_topic"
        android:visible="false"/>
    <item
        android:id="@+id/action_invite_reply"
        android:icon="@drawable/ic_action_invite_reply"
        android:orderInCategory="52"
        android:showAsAction="ifRoom"
        android:title="@string/action_invite_reply"
        android:visible="false"/>
    <item
        android:id="@+id/action_best_of"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_best_of"
        android:visible="false"/>

</menu>