<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/user_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_person"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/user_icon"
                android:text="name"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_toRightOf="@id/user_icon"
                android:text="username"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/bio_raw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activities"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/all_action"
            style="@style/user_actions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/actions_transparent"
            android:text="@string/actions_all"/>

        <Button
            android:id="@+id/topics_action"
            style="@style/user_actions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/actions_transparent"
            android:text="@string/actions_topics"/>

        <Button
            android:id="@+id/posts_action"
            style="@style/user_actions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/actions_transparent"
            android:text="@string/actions_posts"/>

        <Button
            android:id="@+id/replies_action"
            style="@style/user_actions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/actions_reply"
            android:text="@string/actions_replies"/>

        <Button
            android:id="@+id/likes_given_action"
            style="@style/user_actions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/actions_transparent"
            android:text="@string/actions_likes_given"/>

        <Button
            android:id="@+id/likes_received_action"
            style="@style/user_actions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/actions_heart"
            android:text="@string/actions_likes_received"/>

        <Button
            android:id="@+id/edits_action"
            style="@style/user_actions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/actions_edit"
            android:text="@string/actions_edits"/>

        <Button
            android:id="@+id/bookmarks_action"
            style="@style/user_actions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/actions_bookmark"
            android:text="@string/actions_bookmarks"/>

        <Button
            android:id="@+id/likes_action"
            style="@style/user_actions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/actions_likes"
            android:text="@string/actions_likes"/>

        <ViewStub
            android:id="@+id/private_msg_stub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inflatedId="@+id/private_msg_layout"
            android:layout="@layout/private_msg_layout"/>

        <TextView
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/create_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/last_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/last_seen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/trust_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"/>
    </LinearLayout>

</ScrollView>